<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/tvLoginExists"
        android:layout_marginTop="182dp"
        android:gravity="right"
        android:text="@string/loginIDScreenUserProfile"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvLoginExists"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etFName"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/existingLoginId"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="12sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etFName"
        android:layout_alignStart="@+id/textView"
        android:gravity="right"
        android:text="@string/fname"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="83dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etLName"
        android:layout_alignStart="@+id/textView"
        android:gravity="right"
        android:text="@string/lname"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etPhone"
        android:layout_alignStart="@+id/textView"
        android:gravity="right"
        android:text="@string/phone"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etEmail"
        android:layout_alignStart="@+id/textView"
        android:gravity="right"
        android:text="@string/email"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvInvalidEmail"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etPassword"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/invalidEmail"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="12sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etPassword"
        android:layout_alignStart="@+id/textView"
        android:gravity="right"
        android:text="@string/passwordScreenUserProfile"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvInvalidPassword"
        android:layout_width="308dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etCnfrmPassword"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/invalidPassword"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="11sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etCnfrmPassword"
        android:layout_alignEnd="@+id/textView"
        android:text="@string/confirmPassword"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvPasswordsMismatch"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="61dp"
        android:gravity="center"
        android:text="@string/invalidconfirmPassword"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="11sp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="129dp"
        android:layout_height="38dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:text="@string/save" />

    <EditText
        android:id="@+id/etLogin"
        android:layout_width="178dp"
        android:layout_height="36dp"
        android:layout_alignBaseline="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvInvalidEmail"
        android:layout_toEndOf="@+id/textView"
        android:autoLink="email"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etFName"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etLName"
        android:layout_toEndOf="@+id/textView"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etLName"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etPhone"
        android:layout_toEndOf="@+id/textView"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvInvalidPassword"
        android:layout_toEndOf="@+id/textView"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etEmail"
        android:layout_toEndOf="@+id/textView"
        android:autoLink="phone"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/etCnfrmPassword"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvPasswordsMismatch"
        android:layout_toEndOf="@+id/textView"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/ivProfilePic"
        android:layout_width="196dp"
        android:layout_height="136dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        app:srcCompat="@mipmap/ic_launcher_round" />

</RelativeLayout>